deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-ms1
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-ms1
  template:
    metadata:
      labels:
        app: kube-ms1
    spec:
      containers:
        - name: kube-ms1
          image: ion21/kube-ms1:v1
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: kube-ms1
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: kube-ms1
