deployment-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  labels:
    app: react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-container
          image: ion21/kube-client:v3
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: app-config-volume
              mountPath: /app/public/config
              readOnly: true
      volumes:
        - name: app-config-volume
          configMap:
            name: app-config
            items:
              - key: config.json
                path: config.json

---
apiVersion: v1
kind: Service
metadata:
  name: react-app
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: react-app
