deployment-command.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: command-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: command-service
  template:
    metadata:
      labels:
        app: command-service
    spec:
      containers:
        - name: command-service
          image: ion21/command-service:16.12.2024.16.10.19
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: command-service
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: command-service
