deployment-security.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: security-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: security-app
  template:
    metadata:
      labels:
        app: security-app
    spec:
      containers:
        - name: security-app
          image: ion21/kube-security:v1
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: security-app
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 8083
      targetPort: 8082
  selector:
    app: security-app
