ingres-land.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-land-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx 
  rules:
    - host: kube-land.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-land
                port:
                  number: 8082
