ingress-v2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: react-app.local
    http:
      paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: kube-land
              port:
                number: 8082
        - path: /
          pathType: Prefix
          backend:
            service:
              name: react-app
              port:
                number: 3000
