ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: react-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-app
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: kube-land
                port:
                  number: 8082
